# OpenGl3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: demo.cpp  index.cpp  index.h  precomz.h
source/Camera/: OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
source/Core/: Base.h  ExecuteCommands.cpp  ExecuteCommands.h  KeyCodes.h  LightType.h  Log.cpp  Log.h  LogFile.cpp  LogFile.h  MouseCodes.h  Timestep.h
source/Events/: Event.cpp  Event.h
source/GeometricalStructure/: CubeStructure.cpp  CubeStructure.h  structu.cpp  structu.h  vertices.txt
source/ImguiHandle/: ImGuiBuild.h  ImguiHandle.cpp  ImguiHandle.h  ImguiLayer.cpp  ImguiLayer.h
source/IndexBuffers/: IndexBuffer.cpp  IndexBuffer.h
source/Initializer/: Initialize.cpp  Initialize.h
source/Light/: Light.h
source/Materials/: Materials.h  MaterialsProperty.json
source/Model_Mesh/: mesh.cpp  mesh.h  model.cpp  model.h
source/Mvps/: ModelMatrix.h  MvpMatrix.cpp  MvpMatrix.h  ProjectionMatrix.h
source/Renderer/: Renderer.cpp  Renderer.h
source/Shaders/: Basic.shader  Color.shader  CubeShader.shader  Light.shader  ShaderInitialize.cpp  ShaderInitialize.h  loading.shader
source/Texture/: Texture.cpp  Texture.h
source/VertexArrays/: VertexArray.cpp  VertexArray.h
source/VertexBufferLayouts/: VertexBufferLayout.cpp  VertexBufferLayout.h
source/VertexBuffers/: VertexBuffer.cpp  VertexBuffer.h
